--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,8 @@
+/* 
 #root {
   max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  margin: 0;
+  padding: 0;
   text-align: center;
 }
 
@@ -36,7 +37,7 @@
 .card {
   padding: 2em;
 }
-
+  
 .read-the-docs {
   color: #888;
-}
+} */
